Fix margin left of dark mode switch

--- a/styles/header.module.less
+++ b/styles/header.module.less
@@ -48,6 +48,7 @@
 }
 
 .darkModeSwitchItem {
+  margin-left: auto;
   padding: 0 16px !important;
 }
 
